# ros2_robotic_arm

./: CMakeLists.txt  package.xml
src/ur5_description/: CMakeLists.txt
src/ur5_description/urdf/: ur.urdf.xacro
src/ur5_gazebo/config/: ur5_controllers.yaml
src/ur5_gazebo/launch/: bringup_gazebo.launch.py  realsense_gazebo.launch.py  robot_state_publisher.launch.py  test.launch.py
src/ur5_gazebo/models/beer/: model-1_4.sdf
src/ur5_gazebo/models/cracker/: model.config  model.sdf
src/ur5_gazebo/models/realsense_camera/: model.config
src/ur5_gazebo/models/soap/materials/scripts/: soap.material
src/ur5_gazebo/models/soap2/materials/scripts/: soap2.material
src/ur5_gazebo/models/tomato_sauce/: model.config
src/ur5_moveit_config/config/: ompl_planning.yaml
src/ur5_moveit_config/launch/: bringup_gazebo.launch.py  view_ur.launch.py
src/ur5_moveit_config/srdf/: ur_macro.srdf.xacro
src/ur5_moveit_config/ur5_moveit_config/: launch_common.py
ur5_arm/: CMakeLists.txt
ur5_arm/src/ur5_description/: package.xml
ur5_arm/src/ur5_description/config/: visual_parameters.yaml
ur5_arm/src/ur5_description/urdf/: ur.urdf.xacro  ur_macro.xacro
ur5_arm/src/ur5_description/urdf/inc/: ur_transmissions.xacro
ur5_arm/src/ur5_gazebo/: package.xml
ur5_arm/src/ur5_gazebo/config/: ur5_controllers.yaml
ur5_arm/src/ur5_gazebo/launch/: bringup_gazebo.launch.py
ur5_arm/src/ur5_gazebo/models/realsense_camera/: model.sdf
ur5_arm/src/ur5_gazebo/models/soda_can/: model.sdf
ur5_arm/src/ur5_gazebo/worlds/: pick_place.world
ur5_arm/src/ur5_gazebo/worlds/realsense/: realsense_setup.world
ur5_arm/src/ur5_moveit_config/: package.xml
ur5_arm/src/ur5_moveit_config/config/: controllers.yaml
ur5_arm/src/ur5_moveit_config/launch/: ur_moveit.launch.py  view_ur.launch.py
ur5_arm/src/ur5_moveit_config/srdf/: ur.srdf.xacro
ur5_gazebo/: CMakeLists.txt
ur5_moveit_config/: CMakeLists.txt
ur5_robotic_arm/: README.md
ur5_robotic_arm/src/ur5_description/urdf/camera/: realsense.urdf
ur5_robotic_arm/src/ur5_gazebo/models/biscuits/materials/scripts/: biscuits.material
ur5_robotic_arm/src/ur5_gazebo/models/realsense_camera/: model.sdf
ur5_robotic_arm/src/ur5_gazebo/models/short_table/: model.sdf
ur5_robotic_arm/src/ur5_gazebo/models/tomato_sauce/: model.sdf
ur5_robotic_arm/src/ur5_gazebo/worlds/: pick_place.world
ur5_robotic_arm/src/ur5_gazebo/worlds/realsense/: realsense_setup.world
ur5_robotic_arm/src/ur5_moveit_config/config/: kinematics.yaml
ur5_robotic_arm/src/ur5_moveit_config/launch/: ur_moveit.launch.py
ur5_robotic_arm/ur5_arm/src/ur5_description/urdf/: ur.urdf.xacro
ur5_robotic_arm/ur5_arm/src/ur5_gazebo/: CMakeLists.txt
ur5_robotic_arm/ur5_arm/src/ur5_gazebo/config/: ur5_controllers.yaml
ur5_robotic_arm/ur5_arm/src/ur5_gazebo/launch/: bringup_gazebo.launch.py  test.launch.py
ur5_robotic_arm/ur5_arm/src/ur5_moveit_config/: CMakeLists.txt
ur5_robotic_arm/ur5_arm/src/ur5_moveit_config/launch/: view_ur.launch.py
(+1 files in other folders)
