<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_arm</name>
  <version>0.0.0</version>
  <description>ur5 parent package</description>
  <maintainer email="ros20.doc@gmail.com">Anubhav Singh</maintainer>
  <license>Apache Licence 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
